# qt_calc

writer_v1/: CMakeLists.txt  grid.cpp  grid.h  main.cpp  main_win.cpp  main_win.h
writer_v1/api_c/: adapter.c  adapter.h
writer_v1/c_libs/: calc.c  graph.c  graphic.c  graphic.h  header.h  init.c  s21_calc.h  s21_call.c  s21_valid.c  stac_char.c  validation.c  validation.h
writer_v1/c_libs/src/: Makefile  convert.c  graph.c  header.h  stack_char.h  stack_double.h  test_calc.c  validation.c  validation.h
